Add security definitions to API and update Swagger title
