# docs/swagger.json
@@ -47,7 +47,7 @@
                 }
             }
         },
-        "/auth/login": {
+        "/login": {
             "post": {
                 "description": "Login",
                 "consumes": [
@@ -219,6 +219,11 @@
         },
         "/users/:id": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "User",
                 "consumes": [
                     "application/json"
@@ -329,6 +334,13 @@
                 },
                 "token": {}
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
